--- a/css/luckyDraw.css
+++ b/css/luckyDraw.css
@@ -37,7 +37,8 @@ input,button,select,textarea {
 	margin-top: -107px;
 	z-index: 1;
 	transform: rotate(0deg);
-	-ms-transform: rotate(0deg)
+	-ms-transform: rotate(0deg);
+	outline:none
 }
 
 #btn_run {
